fix(popup): add transform style for firefox to prevent jumping tooltips
Closes #442

--- a/src/definitions/modules/popup.less
+++ b/src/definitions/modules/popup.less
@@ -186,10 +186,12 @@
 }
 [data-tooltip][data-position="left center"]:after,
 [data-tooltip][data-position="right center"]:after {
+  -moz-transform-style: preserve-3d;
   transform: translateY(-50%) scale(0) !important;
 }
 [data-tooltip][data-position="left center"]:hover:after,
 [data-tooltip][data-position="right center"]:hover:after {
+  -moz-transform-style: preserve-3d;
   transform: translateY(-50%) scale(1) !important;
 }
 [data-tooltip][data-position="top left"]:after,
